[package]
name = "matrix-tabs"
version = "0.1.0"
authors = ["Elinor Berger <elinor@safaradeg.net>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
matrix-sdk = { version = "0.7", default-features = false, features = ["anyhow", "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
rpassword = "7.3"
tokio = { version = "1.39", features = ["rt"] }
clap = { version = "4.5", features = ["derive"] }
